# saunterbot

./: .gitignore  README.md  pep8.sh  requirements.txt  setup.bash  setup_local.bash  setup_remote_local.bash
models/: .gitignore  arduino_mega_mount.scad  arduino_mega_mount_bottom.scad  arduino_mega_mount_top.scad  balancer.scad  balancer_bottom_plate.scad  balancer_drive_gear.scad  balancer_gear_axle_top.scad  balancer_gear_washer.scad  balancer_middle_plate.scad  balancer_opposite_gear.scad  balancer_top_plate.scad  balancer_translation_gear.scad  balancer_weight_container.scad  foot_mock.scad  (+51 more)
src/ros/src/saunterbot/: CMakeLists.txt  README  package.xml
src/ros/src/saunterbot/data/: nn_balancing_params.yaml  pid_balancing_params.yaml
src/ros/src/saunterbot/launch/: serial_torso.launch
src/ros/src/saunterbot/nodes/: nn_param_searcher.py  param_searcher.py  pid_param_searcher.py
src/ros/src/saunterbot/scripts/: align_leg_servos.sh  calculate_sideways_stability.py  full_squat.sh  leg_lift_test1.sh  leg_lift_test2.sh  leg_lift_test3.sh  leg_lift_test4.sh  relax_knees.sh
src/ros/src/saunterbot/src/firmware/: write_pinouts.py
src/ros/src/saunterbot/src/firmware/torso/: ADCTracker.h  AccelGyroSensor.h  ArduinoPinout.csv  ArduinoPinout.h  BalanceController.h  Controller.h  Makefile  PID.h  PIDController.h  README  README.md  ServoController.h  VelocityTracker.h  main.ino
src/ros/src/saunterbot/src/firmware/torso/lib/MPU6050/: MPU6050.h  MPU6050_6Axis_MotionApps20.h
src/ros/src/saunterbot/src/firmware/torso/lib/ResponsiveAnalogRead/: ResponsiveAnalogRead.cpp
(+127 files in other folders)
